--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   "author": "Rahil",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "cross-env": "^10.0.0"
+    "cross-env": "^10.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "^3.6.2"
   }
 }
