--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://ash:Ash_2904@learningdb.xf1elc3.mongodb.net/gamminggo?retryWrites=true&w=majority&appName=LearningDB
+DATABASE=mongodb+srv://ash:Ash_2904@learningdb.xf1elc3.mongodb.net/gaminggo?retryWrites=true&w=majority&appName=LearningDB
 DATABASE_PASSWORD=Ash_2904
