--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://ash:Ash_2904@learningdb.xf1elc3.mongodb.net/gaminggo?retryWrites=true&w=majority&appName=LearningDB
 DATABASE_PASSWORD=Ash_2904
+
+JWT_SECRET=I-LOVE-SPORTS-AND-ANIME-AND-GAMES-WAU?
+JWT_EXPIRES_IN=90d
