--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Rahil",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
