--- a/config.env
+++ b/config.env
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=Ash_2904
 
 JWT_SECRET=I-LOVE-SPORTS-AND-ANIME-AND-GAMES-WAU?
 JWT_EXPIRES_IN=90d
+
+GMAIL_HOST=sandbox.smtp.mailtrap.io
+GMAIL_PORT=2525
+GMAIL_USERNAME=401eb5cf69ae21
+GMAIL_PASSWORD=104e03f9400744
