--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.5",
     "slugify": "^1.6.6",
     "validator": "^13.15.15"
   },
