--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE_PASSWORD=Ash_2904
 
 JWT_SECRET=I-LOVE-SPORTS-AND-ANIME-AND-GAMES-WAU?
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIIRES_IN=90
 
 GMAIL_HOST=sandbox.smtp.mailtrap.io
 GMAIL_PORT=2525
