--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.5",
     "slugify": "^1.6.6",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "cross-env": "^10.0.0",
